modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate_random_list",
-  "homepage": "https://gitname.github.io/Generate_Random_List",
+  "homepage": "https://Code-Asif.github.io/Generate_Random_List",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
